--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@
               <tbody>
                   <tr>
                       <td><p><strong>Τράπεζα δικαιούχου:</strong></p></td>
-                      <td><p>Revolut Bank UAB Vilnius Sucursala Bucuresti</p></td>
+                      <td><p>BANCA COMERCIALA ROMANA S.A</p></td>
                   </tr>
                   <tr>
                       <td colspan="2"><hr></td>
                   </tr>
                   <tr>
                       <td><p><strong>ΙΒΑΝ δικαιούχου:</strong></p></td>
-                      <td><p>RO43 REVO 0000 3101 8417 4367</p></td>
+                      <td><p>RO43 RNCB 0179 1821 9350 0002</p></td>
                   </tr>
                   <tr>
                       <td colspan="2"><hr></td>
@@ -181,28 +181,28 @@
                   </tr>
                   <tr>
                       <td><p><strong>Διεύθυνση τράπεζας:</strong></p></td>
-                      <td><p>Bucuresti, Romania (Bulevardul Ion Mihalache Nr. 15-17, MINDSPACE VICTORIEI, TOWER CENTER INTERNATIONAL, BIROU 111, Etaj 1, Sector 1, 011171)</p></td>
+                      <td><p>Bucuresti, Romania (Bd Regina Elisabeta 5 - SECTOR 3, 30016)</p></td>
                   </tr>
                   <tr>
                       <td colspan="2"><hr></td>
                   </tr>
                   <tr>
                       <td><p><strong>Διεύθυνση δικαιούχου:</strong></p></td>
-                      <td><p>BD TUDOR VLADIMIRESCU 255, B217, 220206, DROBETA TURNU SEVERIN, ROMANIA</p></td>
+                      <td><p>DROBETA TURNU SEVERIN, Romania (BD TUDOR VLADIMIRESCU 255, B217, 220206)</p></td>
                   </tr>
                   <tr>
                       <td colspan="2"><hr></td>
                   </tr>
                   <tr>
                       <td><p><strong>BIC τράπεζας:</strong></p></td>
-                      <td><p>REVOROBB</p></td>
+                      <td><p>RNCBROBU</p></td>
                   </tr>
                   <tr>
                       <td colspan="2"><hr></td>
                   </tr>
                   <tr>
                       <td><p><strong>Αιτιολογία:</strong></p></td>
-                      <td><p>Όνομα + Επίθετο</p></td>
+                      <td><p>Accelerator - Όνομα + Επίθετο</p></td>
                   </tr>
               </tbody>
           </table>
