--- a/index.html
+++ b/index.html
@@ -210,9 +210,15 @@
           <hr>
          <br>
           <ul style="list-style-type: disc; padding-left: 20px;">
-              <li>Αν σας καλέσουν από την τράπεζά σας (για λόγους ασφαλείας), ευχαριστήστε τους (!), επιβεβαιώστε (α) ότι μας γνωρίζετε και (β) εγκρίνετε τη μεταφορά στον Ευρωπαϊκό τραπεζικό λογαριασμό της εταιρείας του ομίλου μας στην τράπεζα Revolut.</li>
+              <li>Αν σας καλέσουν από την τράπεζά σας (για λόγους ασφαλείας), ευχαριστήστε τους (!) και επιβεβαιώστε ότι :<br>
+(α) μας γνωρίζετε και <br>
+(β) εγκρίνετε τη μεταφορά σε όποιον τραπεζικό λογαριασμό επιλέξατε<br>
+(γ) αν δεν επαρκεί το ημερήσιο όριο της κάρτας σας ζητήστε να το αναπροσαρμόσουν για αυτή την πληρωμή</li>
             
-              <li>Ολοκληρώνοντας τη μεταφορά, επισυνάψτε το αποδεικτικό μεταφοράς στη φόρμα ασφαλούς πληρωμής ΚΑΙ πατήστε ΥΠΟΒΟΛΗ,και θα λάβετε (α) το τιμολόγιό σας, και (β) επιβεβαίωση της πληρωμής σας!</li>
+              <li>Ολοκληρώνοντας τη μεταφορά, επισυνάψτε το αποδεικτικό μεταφοράς στη φόρμα ασφαλούς πληρωμής ΚΑΙ πατήστε ΥΠΟΒΟΛΗ.  Και θα λάβετε: <br>
+(α) το τιμολόγιό σας <br>
+(β) επιβεβαίωση της πληρωμής και εγγραφής σας στο πρόγραμμα<br>
+(γ) σύνδεσμο για να κλείσετε την 1η σας συνάντηση!</li>
           </ul>
       </div>
   </div>
