--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
         <!-- Bank Details Section -->
  <div id="bankDetails" style="display: none;" class="mt-4">
   <div>
-  <img src="https://www.dropbox.com/scl/fi/dnbtwzyg7v7ex4hrxejsv/neww-ahi.png?rlkey=5f9zwsy3wx4aqemj7vvih4nib&st=voly01y6&dl=1" alt="Description of image">
+  <a href="https://checkout.revolut.com/pay/cf7eb2fb-506d-45f3-b1cd-96e5e0ed635b"><img src="https://www.dropbox.com/scl/fi/dnbtwzyg7v7ex4hrxejsv/neww-ahi.png?rlkey=5f9zwsy3wx4aqemj7vvih4nib&st=voly01y6&dl=1" alt="Description of image"></a>
 </div>
     
 
