--- a/index.html
+++ b/index.html
@@ -488,8 +488,11 @@
         <!-- Bank Details Section -->
  <div id="bankDetails" style="display: none;" class="mt-4">
   <div>
-  <a href="https://checkout.revolut.com/pay/cf7eb2fb-506d-45f3-b1cd-96e5e0ed635b"><img src="https://www.dropbox.com/scl/fi/dnbtwzyg7v7ex4hrxejsv/neww-ahi.png?rlkey=5f9zwsy3wx4aqemj7vvih4nib&st=voly01y6&dl=1" alt="Description of image"></a>
+  <a href="https://checkout.revolut.com/pay/cf7eb2fb-506d-45f3-b1cd-96e5e0ed635b" target="_blank" rel="noopener noreferrer">
+    <img src="https://dl.dropboxusercontent.com/scl/fi/dnbtwzyg7v7ex4hrxejsv/neww-ahi.png?rlkey=5f9zwsy3wx4aqemj7vvih4nib&st=voly01y6" alt="Description of image">
+  </a>
 </div>
+
     
 
 </div>
