Update payment image source in index.html

--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
          <div id="paymentLink" style="display: none;" class="mt-4">
           <div>
             <a href="https://checkout.revolut.com/pay/cf7eb2fb-506d-45f3-b1cd-96e5e0ed635b" target="_blank">
-              <img src="https://www.dropbox.com/scl/fi/xusvpru1i8pz5jhmdzomi/Payment.png?rlkey=oj646olfp8dsjug54qnqm24dr&st=dvfemou6&dl=1" alt="Description of image">
+              <img src="https://www.dropbox.com/scl/fi/q3barnmco98ecegrhl6w1/githubbbbbb.png?rlkey=noq3nzgmhj7wyb3ugl1f9px5v&st=qb5ctw4t&dl=1" alt="Description of image">
             </a>
           </div>
      
