--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
    
 <div id="bankDetails" style="display: none;" class="mt-4">
 <div>
-<img src="https://www.dropbox.com/scl/fi/yj12ppsbvl83zpnzin6jv/Bank-Details.png?rlkey=yipmsat7kkzywo34gtfgwrff6&st=zig9v6g4&dl=1" alt="Description of image">
+<img src="https://www.dropbox.com/scl/fi/q3barnmco98ecegrhl6w1/githubbbbbb.png?rlkey=noq3nzgmhj7wyb3ugl1f9px5v&e=1&st=npsviutv&dl=1" alt="Description of image">
 </div>
 
 
