Enhance bank details section with image
Updated bank details section to include an image with styling.

--- a/index.html
+++ b/index.html
@@ -491,13 +491,10 @@
 
   <!-- Bank Details Section -->
    
-<div id="bankDetails" style="display: none;" class="mt-4">
+<div id="bankDetails" style="display: none;text-align: center;" class="mt-4">
 <div>
-<img src="" alt="Description of image">
+<img style="display: inline-block; max-width: 100%; height: auto;" src="https://www.dropbox.com/scl/fi/q3barnmco98ecegrhl6w1/githubbbbbb.png?rlkey=noq3nzgmhj7wyb3ugl1f9px5v&e=1&st=npsviutv&dl=1" alt="Description of image">
 </div>
-
-
-
 </div>
 
 
